--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "dependencies": {
     "@types/http-assert": "^1.3.0",
-    "@types/knex": "^0.14.20",
+    "@types/knex": "^0.14.24",
     "@types/lodash": "^4.14.112",
     "@types/node": "10.3.1",
     "@types/node-uuid": "0.0.28",
@@ -17,17 +17,17 @@
     "co-body": "4.2.0",
     "form-data": "2.1.2",
     "google-libphonenumber": "2.0.9",
-    "knex": "0.14.2",
-    "koa": "1.2.4",
+    "knex": "^0.15.2",
+    "koa": "^1.6.2",
     "koa-multer": "0.0.2",
     "koa-router": "5.4.0",
-    "lodash": "4.16.6",
+    "lodash": "^4.17.11",
     "mime-types": "2.1.17",
     "node-fetch": "1.6.3",
     "node-uuid": "1.4.7",
-    "pg": "6.1.0",
+    "pg": "^7.4.3",
     "pg-rethrow": "1.0.1",
-    "probe-image-size": "4.0.0",
+    "probe-image-size": "^4.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
